# OpenTTD-crash-analyzer

./: .gitignore  0.bootstrap.js  Cargo.toml  README.md  bootstrap.js  index.html
.github/workflows/: ghpages.yml
src/: crashlog.rs  lib.rs  symbols.rs
web/: index.html  index.js  package-lock.json  package.json
