[package]
name = "crash-analyzer"
version = "0.1.0"
authors = ["Patric Stout <truebrain@openttd.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
breakpad-symbols = "0.17"
console_error_panic_hook = "0.1"
futures = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
minidump = "0.17"
minidump-common = "0.17"
minidump-processor = { version = "0.17", default-features = false, features = [] }
minidump-unwind = { version = "0.17", features = [] }

[dependencies.web-sys]
version = "0.3"
features = [
    "File",
    "FileReader",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]

[profile.release]
opt-level = "s"
